dev: server - define auth apis
