# server/utils/http/helper.go
@@ -1,0 +1,8 @@
+package httputils
+
+type EmptyResponse struct{}
+
+type Error struct {
+	Code    int    `json:"code"`
+	Message string `json:"message"`
+}
